--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -12,13 +12,19 @@
          android:isScrollContainer="true"
          android:singleLine="false"
          android:textIsSelectable="true"
-         android:textSize="20sp" />
+         android:textSize="25sp" />
      
       <TextView
         android:id="@+id/def"        
         android:layout_height="fill_parent" 
         android:layout_width="wrap_content"
-        android:layout_toRightOf="@id/edit1"     
+        android:layout_toRightOf="@id/edit1"
+        android:inputType="none"
+        android:isScrollContainer="true"
+        android:singleLine="false"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:hint="@string/hint"        
         android:textSize="20sp" />
 
 </RelativeLayout>
